modified README.md: modified asciinema; modified Makefile; modified build.gradle.kts: add checkstyle add checkstyle; add Makefile to Route;

--- a/app/Makefile
+++ b/app/Makefile
@@ -1,2 +1,22 @@
 run-dist:
+	./build/install/app/bin/app -h
+
+clean:
+	./gradlew clean
+
+build:
+	./gradlew clean build
+
+install-dist:
+	./gradlew clean installDist
+
+lint:
+	./gradlew checkstyleMain checkstyleTest
+
+test-files:
 	./build/install/app/bin/app file1.json file2.json
+
+.PHONY: build clean lint config test
+
+
+
