--- a/app/Makefile
+++ b/app/Makefile
@@ -13,8 +13,17 @@ install-dist:
 lint:
 	./gradlew checkstyleMain checkstyleTest
 
+test:
+	./gradlew test
+
+report:
+	./gradlew jacocoTestReport
+
 test-files:
 	./build/install/app/bin/app file1.json file2.json
+
+test-files-2: 
+	./build/install/app/bin/app file3.json file4.json
 
 .PHONY: build clean lint config test
 
