--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,8 +33,23 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
 
+    - name: CheckStyle
+      run: make lint
+
+    - name: Test
+      run: make test
+
     - name: Build with Gradle Wrapper
       run: make build
+
+    - name: Publish code coverage
+      uses: paambaati/codeclimate-action@v9.0.0
+      env:
+          CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
+          JACOCO_SOURCE_PATH: ${{github.workspace}} app/src/main/java
+      with:
+          coverageCommand: make report
+          coverageLocations: ${{github.workspace}}app/build/reports/jacoco/test/jacocoTestReport.xml:jacoco
 
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
